# release-schedule-generator

./: .gitreview  CONTRIBUTING.rst  README.rst  requirements.txt  schedule.yml  setup.cfg
generator/: main.py
release_schedule_generator/: __init__.py  main.py
